# flipperone-mcu-firmware-hackup-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: one.cpp
applications/: app.template  applications.c  applications.h
applications/debug/haptic_test/: haptic_effect_name.h  haptic_test.c
applications/debug/keypad_test/: keypad_test.c
applications/debug/touchpad_test/: touchpad_test.c
applications/main/cpu/: cpu_app.c
applications/services/: applications.c  applications.h
applications/services/cli/: cli.c  cli.h  cli_command_gpio.c  cli_commands.c  cli_i.h  cli_vcp.c
applications/services/desktop/: desktop.c
applications/services/display/: display.c  display.h
applications/services/fusb302/: fusb302.c  fusb302.h
applications/services/gui/: clay.h  clay_helper.c  clay_helper.h  clay_render.c  clay_render.h  gui.c  gui.h  gui_i.h  view.c  view.h  view_i.h  view_port.c  view_port.h  view_port_i.h
applications/services/gui/font/: font_render.c  font_render.h
applications/services/haptic/: haptic.c  haptic.h
applications/services/input/: input.c  input.h
applications/services/input_touch/: input_touch.c  input_touch.h
applications/services/led/: led.h  led_backend.c  led_batch.h  led_batches.c  led_cli.c  led_cli.h
applications/services/power/: power.c  power.h  power_cli.c  power_cli.h
applications/services/power_menu/: power_menu.c
applications/services/status_lights/: status_lights.h  status_lights_backend.c  status_lights_notification.c  status_lights_notification.h
applications/services/test/: test.c
applications/services/test_input/: test_input.c
applications/services/test_peref/: test_peref.c
applications/services/uart_echo/: uart_echo.c
applications/services/usb/: usb.c
applications/template/: app.c
assets/: CMakeLists.txt
assets/python/: build.sh
assets/scripts/: ExampleCMakeLists.txt  bin2h.cmake
lib/drivers/: display.hpp  keys.hpp  log.hpp  pwm.hpp  ws2812_strip.hpp
lib/drivers/bq25792/: bq25792.c  bq25792.h  bq25792_helper.h  bq25792_reg.h  bq25792_utils.c
lib/drivers/display/: display_jd9853_qspi.c  display_jd9853_qspi.h  display_jd9853_reg.h  display_jd9853_spi.c  display_jd9853_spi.h  jd9853_reg.h
lib/drivers/drv2605l/: drv2605l.c  drv2605l.h  drv2605l_effect.h  drv2605l_reg.h
lib/drivers/fusb302/: fusb302.c  fusb302.h  fusb302_reg.h
lib/drivers/i2c_master_pio/: CMakeLists.txt  i2c.pio  pio_i2c.c  pio_i2c.h
lib/drivers/i2c_multi_slave/: CMakeLists.txt  example_use_i2c_multi_slave  i2c_multi.c  i2c_multi.h
lib/drivers/ina219/: ina219.c  ina219.h  ina219_reg.h
lib/drivers/iqs7211e/: IQS7211E_init.h  iqs7211e.c  iqs7211e.h  iqs7211e_reg.h
lib/drivers/spi_get_frame/: spi_get_frame.c  spi_get_frame.h
lib/drivers/tca6416a/: tca6416a.c  tca6416a.h  tca6416a_reg.h
lib/drivers/tps62868x/: tps62868x.c  tps62868x.h  tps62868x_reg.h
lib/drivers/ws2812/: ws2812.c  ws2812.h
lib/freertos/: CMakeLists.txt  FreeRTOSConfig.h  freertos_glue.cpp
lib/furi/: flipper.c  flipper.h  furi.c  furi.h
lib/furi/core/: base.h  check.c  check.h  event_loop.c  event_loop.h  event_loop_i.h  event_loop_timer.c  kernel.c  log.c  log.h  memmgr_heap.c  state.c  state.h  string.c  string.h  sys_task_alloc.c  thread.c  thread.h
lib/furi/version/: version.c  version.h  version.inc.h
lib/lvgl/: CMakeLists.txt  lv_conf.h
lib/lvgl/fonts/: lv_font_haxrcorp4089_16.c  lv_font_helvetica_bold_12.c  lv_font_profont_12.c  lv_font_profont_24.c  lv_font_tiny5_8.c  lv_font_tiny_6.c
lib/lvgl/fonts/src/: HelveticaBold-12-edited.bdf
lib/mlib/: CMakeLists.txt
lib/toolbox/: args.c  color.c  color.h  furi_callback.h  strint.c  strint.h
lib/tusb/: usb_descriptors.c
lib/ws2812/: CMakeLists.txt
targets/f100/config/: ffconf.h  rp2350_linker.h  tusb_config.h
targets/f100/furi_bsp/: furi_bsp.c  furi_bsp.h  furi_bsp_expander.c  furi_bsp_expander.h  furi_bsp_stdio.c  furi_bsp_stdio.h
targets/f100/furi_hal/: furi_hal.c  furi_hal.h  furi_hal_clock.c  furi_hal_clock.h  furi_hal_debug.c  furi_hal_flash.c  furi_hal_flash.h  furi_hal_gpio.c  furi_hal_gpio.h  furi_hal_i2c.c  furi_hal_i2c.h  furi_hal_i2c_config.c  furi_hal_i2c_config.h  furi_hal_i2c_types.h  furi_hal_interrupt.c  furi_hal_interrupt.h  furi_hal_memory.c  furi_hal_memory.h  furi_hal_nvm.c  furi_hal_nvm.h  furi_hal_os.c  furi_hal_power.c  furi_hal_power.h  furi_hal_pwm.c  furi_hal_pwm.h  furi_hal_resources.c  furi_hal_resources.h  furi_hal_resources_pins.c  furi_hal_serial.c  furi_hal_serial.h  furi_hal_serial_control.c  furi_hal_serial_control.h  furi_hal_serial_types.h  furi_hal_serial_types_i.h  furi_hal_spi.c  furi_hal_spi.h  furi_hal_spi_types.h  furi_hal_spi_types_i.h  furi_hal_usb_cdc.c  furi_hal_usb_cdc.h  (+3 more)
targets/f100/src/: main.c  main.cpp
